web/static/css/layout.css
body {
    color: #383a3d;
}

header {
    padding-bottom: 20px;
    border-bottom: 1px dotted #999;
    position: relative;
}

header .sign-in {
    position: absolute;
    top: 15px;
    right: 0;
}

.wrapper {
    width: 600px;
    margin: 0 auto;
    padding-bottom: 80px;
}

.container {
    padding-bottom: 20px;
}

.page-header {
    margin-top: 0;
    padding-bottom: 0;
    border-bottom: 5px solid #911A31;
}

h1,
h2,
h3 {
    font-weight: normal;
}

h1 {
    margin: 0;
    padding: 50px 0 20px 20px;
    font-size: 3em;
    line-height: 1;
    background-color: #AF1E3A;
}

h1 a,
h1 a:hover {
    color: #efefef;
    text-decoration: none;
}

h1 .second {
    color: #383a3d;
    position: relative;
    left: -20px;
}

h2 {
    margin: 40px 0 20px 0;
}

h2 small {
    line-height: 1;
}

ol {
    margin-top: 20px;
}

li {
    color: #383a3d;
}

.tabs {
    margin-top: 20px;
}

.tabs .active > a,
.tabs .active > a:hover {
    color: #383a3d;
}

.description code {
    background: #ececec;
}

.count {
    color: #bfbfbf;
}

.station input {
    width: 92%;
}

.later {
    text-align: right;
}

.reverse {
    text-align: center;
}

.row-fluid + .row-fluid {
    padding-top: 3px;
}

.date input {
    width: 92%;
}

.date input.date {
    width: 53%;
    margin-right: 12px;
}

.date input.time {
    width: 25%;
}

.apply input {
    float: left;
}

.apply a {
    display: block;
    float: left;
    padding: 6px 10px;
}

input.submit {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
    width: 1px;
    height: 1px;
    visibility: hidden;
}

.table tbody + tbody {
    border-top: 0;
}

.table tbody tr:hover td {
    background-color: inherit;
}

.table th {
    font-weight: normal;
}

.table tr.connection {
    cursor: pointer;
}

.table tr.section {
    background-color: #f5f5f5;
    cursor: default;
}

.table tr.section a {
    color: #383A3D;
}

.pager {
    display: none;
}

#stationboard-map {
    width: 90%;
    height: 600px;
    margin-bottom: 10px;
}

@media (max-width: 767px) {
    body {
        padding-top: 20px;
        padding-bottom: 30px;
    }

    form {
        margin-bottom: 8px;
    }

    p:first-child {
        margin-top: 30px;
    }

    .row-fluid .fluid {
        float: left;
        margin-left: 12px;
        width: 48%;
    }

    .row-fluid .fluid.earlier,
    .row-fluid .fluid.later {
        width: 24%;
    }

    .row-fluid .fluid.reverse {
        width: 42%;
    }

    div.footer {
        padding-top: 5px;
    }

    .form-query {
        background-color: #efefef;
        margin: -20px 0 5px -30px !important;
        padding: 20px 20px 0 30px;
        box-sizing: content-box !important;
        border-bottom: 1px solid #ddd;
    }
    
    #stationboard-map {
        width: 100%;
        height: 130px;
    }
}

@media all and (max-device-width: 480px) and (orientation:portrait), all and (max-device-width: 480px) and (orientation:landscape) {

    .date input {
        height: 26px;
        padding: 0;
        border-color: #bbb;
        font-size: 13px;
    }

    .date input:focus {
        border-color: #1a81d2;
    }

    ul.typeahead {
        width: 281px;
        left: 20px !important;
        overflow: hidden;
    }
}

